--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
     <title>เเคมเปญช่วยเหลือเด็กที่ขาดทุนทรัพย์</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     
 </head>
     <style>
@@ -46,8 +45,6 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            flex-wrap: wrap;
-            width: 100%;
         }
         .container1 .item1 {
             display: flex;
@@ -64,20 +61,14 @@
         .container2 {
             display: flex;
             justify-content: center;
-            flex-wrap: wrap;
-            width: 100%;
         }
         .container3 {
             display: flex;
             justify-content: center;
-            flex-wrap: wrap;
-            width: 100%;
         }
         .container4 {
             display: flex;
             justify-content: center;
-            flex-wrap: wrap;
-            width: 100%;
         }
         .container4 .word2 {
             color: #e9c46a;
@@ -146,34 +137,49 @@
             display: flex;
             flex-direction: column;
             margin-top: -20px;
-            /* height: 550px; */
-            flex-wrap: wrap;
-            width: 100%;
+            height: 550px;
         }
-        @media (max-width: 400px) {
-                .container5 {
-
-                    flex-direction: column;
-                }
-            }
         .container5 .content1 {
             display: flex;
             justify-content: center;
             margin-top: 10px;
         }
-        .container5 .content2 {
+        .boxset2 {
+            background-color: #2a9d8f;
             display: flex;
-            justify-content: center;
             justify-content: space-evenly; 
+            flex-wrap: wrap;
+            padding: 50px;
+            padding-top: 20px;
+            margin-top: -500px;
+            margin-bottom: 150px;
         }
-        .container5 .content3 {
-            display: flex;
-            justify-content: center;
+        .box4 {
+            background-image: url(pic4.jpg);
+            background-size: cover;
+            background-position: center;
+            background-color: #e9c46a;
+            width: 400px;
+            height: 290px;
+            margin-top: 30px;
         }
-        .container5 .item4 {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 15px;
+        .box5 {
+            background-image: url(pic5.jfif);
+            background-size: cover;
+            background-position: center;
+            background-color: #e9c46a;
+            width: 400px;
+            height: 290px;
+            margin-top: 30px;
+        }
+        .box6 {
+            background-image: url(pic6.jpg);
+            background-size: cover;
+            background-position: center;
+            background-color: #e9c46a;
+            width: 400px;
+            height: 290px;
+            margin-top: 30px;
         }
         .buttt {
             background-color: #e9c46a;
@@ -196,8 +202,6 @@
             flex-direction: column;
             justify-content: center;
             background-color: #264653;
-            flex-wrap: wrap;
-            width: 100%;
         }
         .container6 .item1 {
             display: flex;
@@ -233,8 +237,6 @@
             flex-direction: column;
             justify-content: center;
             background-color: black;
-            flex-wrap: wrap;
-            width: 100%;
         }
         .container7 .item1 {
             display: flex;
@@ -255,24 +257,38 @@
             display: flex;
             justify-content: center;
             background-color: #264653;
-            height: 30px;
-            flex-wrap: wrap;
-            width: 100%;
+            height: 50px;
+            padding-bottom: 10px;
         }
         .container8 .item1 {
             display: flex;
             justify-content: center;
         }
+        .container9 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .container9 .item3 {
+            display: flex;
+            justify-content: center;
+            margin-top: -200px;
+        }
+        .container9 .item4 {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 10px;
+        }
     </style>
 <body>
     <div class="topnav">
-        <a class="home" href="home.html">Home</a>
-        <a href="form.html">ร่วมลงชื่อสนับสนุนเเคมเปญ</a>
+        <a class="home" href="Home.html">Home</a>
+        <a href="Form.html">ร่วมลงชื่อสนับสนุนเเคมเปญ</a>
         <a href="https://www.eef.or.th/donate/">ร่วมบริจาค</a>
     </div>
     <div class="container1">
         <div class="item1">
-            <h1>ปัญหาการขาดแคลนอุปกรณ์การศึกษาของนักเรียนที่ขาดทุนทรัพย์</h1>
+            <h1>เเคมเปญ : ช่วยเหลือเด็กขาดเเคลนทุนทรัพย์</h1>
         </div>  
         <div class="item2">
             <h4>อย่างที่ทุกคนทราบกันดีว่าในปัจจุบันนั้นเรามีความเหลื่อมล้ำทางด้านการศึกษา ซึ่งจากข้อมูลการตรวจสอบพบว่ามีเด็ก <br>
@@ -286,7 +302,7 @@
     </div>
     <div class="container3">
         <div class="pic">
-          <img src="กราฟ.png" alt="">
+          <img src="กราฟ.png" alt="" width="100%">
         </div> 
     </div>
     <div class="container4">
@@ -320,18 +336,19 @@
         </div>
     </div>
     <div class="container5">
-        <div class="item1">
-            <div class="content1">
+        <div class="content1">
             <h1>ร่วมบริจาค</h1>   
-            </div>
         </div>
-        <div class="item2">
-            <div class="content2">
-                <img src="pic4.jpg" alt="" srcset="" width="350px">
-                <img src="pic5.jfif" alt="" srcset="" width="350px">
-                <img src="pic6.jpg" alt="" srcset="" width="410px">
-            </div>
+    </div>
+    <div class="boxset2">
+        <div class="box4">
         </div>
+        <div class="box5">
+        </div>
+        <div class="box6">       
+        </div>
+    </div>
+    <div class="container9">
         <div class="item3">
             <h2 class="content3">
                 <p>ขอเชิญชวนทุกคนที่เข้ามาร่วมเป็นส่วนหนึ่งในการช่วยเหลือเด็กที่ขาดทุนทรัพย์ในการศึกษาเพื่อให้เกิดความเสมอภาคในการศึกษา <br>
@@ -353,8 +370,8 @@
         </div>
         <div class="item3">
             <div class="content4">
-                <img src="pic7.jpg" alt="" width="350px">
-                <img src="pic8.jpg" alt="" width="350px"> 
+                <img src="pic7.jpg" alt="" width="25%" height="25%">
+                <img src="pic8.jpg" alt="" width="25%" height="25%"> 
             </div>
         </div>
         <div class="item4">
@@ -370,7 +387,7 @@
             </h4>
         </div>
         <div class="item5">
-            <h4>"นี่ถือว่าเป็นความเหลี่ยมล้ำที่ชัดเจน ในเรื่องของการขาดเเคลนอุปกรณ์ในการเรียนซึ่งถือว่าเป็นอุปสรรคหลักในการเรียนการสอนในแบบออนไลน์ <br>
+            <h4>"นี่ถือว่าเป็นความเหลี่ยมล้ำที่ชัดเจน ในเรื่องของการขาดเเคลนอุปกรณ์ในการเรียนซึ่งถือว่าเป็นอุปสรรคหลักในการเรียนการสอนในแบบออนไลน์ 
                 ดังนั้นเราควรที่จะช่วยเหลือเด็กที่เป็นอนาคตของชาติโดยการเเจกเครื่องมือหรือบริจาคให้เเก่กลุ่มเด็กที่ขาดเเคลนทุนทรัพย์ในเรื่องของเครื่องมือเเละอุปกรณ์"</h4>
         </div>
     </div>
